<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settinglayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio"/>
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/audio"
        android:checked="true"/>

    <SeekBar
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/brightness"
        android:max="100"
        android:progress="20" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/color">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blue"
            android:textColor="@color/blue"
            android:text="@string/blue"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow"
            android:textColor="@color/yellow"
            android:text="@string/yellow"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orange"
            android:textColor="@color/orange"
            android:text="@string/orange"/>


    </RadioGroup>

</LinearLayout>